--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -1,16 +1,25 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
+<!ENTITY Ctr_main			"Main">
+<!ENTITY Ctr_experim		"Experimental">
+
 <!ENTITY Ctr_ui				"General UI">
 
+<!ENTITY Ctr_tabs			"Tabs">
 <!ENTITY Ctr_tabs0			"Curved tabs (Australis)">
 <!ENTITY Ctr_tabs1			"Squared tabs (classic)">
 <!ENTITY Ctr_tabs2			"Curved tabs (experimental)">
 <!ENTITY Ctr_tabsotoff		"Tabs not on top">
+<!ENTITY Ctr_tabsintitlebar "Tabs in titlebar">
+<!ENTITY Ctr_tabwidth0		"Max-width: 180px (default)">
+<!ENTITY Ctr_tabwidth1		"Max-width: 150px">
+<!ENTITY Ctr_tabwidth2		"Max-width: 250px (classic)">
 <!ENTITY Ctr_smallnavbut	"Small buttons">
 <!ENTITY Ctr_findbar_def	"Findbar (default position)">
 <!ENTITY Ctr_findbar_top	"Findbar on top">
 <!ENTITY Ctr_findbar_bot	"Findbar at the bottom">
 <!ENTITY Ctr_hidenavbar		"Hide navigation toolbar">
+<!ENTITY Ctr_hiderelstop	"Hide urlbars reload/stop buttons">
 <!ENTITY Ctr_addonbar		"Addon-bar">
 <!ENTITY Ctr_extrabar		"Additional toolbar">
 
@@ -37,6 +46,12 @@
 <!ENTITY Ctr_backforward	"Movable back-forward button">
 <!ENTITY Ctr_flexspace		"Flexible space">
 <!ENTITY Ctr_space			"Space">
+<!ENTITY Ctr_separator		"Separator">
 
-<!ENTITY Ctr_moreinfo1 		"Move buttons to toolbars using">
-<!ENTITY Ctr_moreinfo2 		"browsers 'Customize' menu.">
+<!ENTITY Ctr_moreinfo1 		"Move buttons to toolbars using browsers 'Customize' menu.">
+
+<!ENTITY Ctr_experimental 	"Experimental tweaks">
+<!ENTITY Ctr_combrelstop 	"Combine reload button and stop button [Fx restart needed!]">
+<!ENTITY Ctr_combrelstopt 	"Only works when both buttons are placed in a row before urlbar in this order: [...][reload][stop][...][urlbar]">
+<!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
+<!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
