--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -19,7 +19,6 @@
 <!ENTITY Ctr_findbar_top	"Findbar on top">
 <!ENTITY Ctr_findbar_bot	"Findbar at the bottom">
 <!ENTITY Ctr_hidenavbar		"Hide navigation toolbar">
-<!ENTITY Ctr_hiderelstop	"Hide urlbars reload/stop buttons">
 <!ENTITY Ctr_addonbar		"Addon-bar">
 <!ENTITY Ctr_extrabar		"Additional toolbar">
 
@@ -51,7 +50,7 @@
 <!ENTITY Ctr_moreinfo1 		"Move buttons to toolbars using browsers 'Customize' menu.">
 
 <!ENTITY Ctr_experimental 	"Experimental tweaks">
-<!ENTITY Ctr_combrelstop 	"Combine reload button and stop button [Fx restart needed!]">
-<!ENTITY Ctr_combrelstopt 	"Only works when both buttons are placed in a row before urlbar in this order: [...][reload][stop][...][urlbar]">
+<!ENTITY Ctr_combrelstop 	"Combined reload-stop button [Fx restart needed!]">
+<!ENTITY Ctr_combrelstopt 	"Only works when combined button is placed before urlbar like this [...][reload-stop][...][urlbar][...]. The reload-stop button on urlbar gets hidden.">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
 <!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
