--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -19,7 +19,6 @@
 <!ENTITY Ctr_findbar_top	"Barre de recherche en haut">
 <!ENTITY Ctr_findbar_bot	"Barre de recherche en bas">
 <!ENTITY Ctr_hidenavbar		"Masquer la barre de navigation">
-<!ENTITY Ctr_hiderelstop	"Hide urlbars reload/stop buttons">
 <!ENTITY Ctr_addonbar		"Barre des modules">
 <!ENTITY Ctr_extrabar		"Barre d'outils supplémentaire">
 
@@ -51,7 +50,7 @@
 <!ENTITY Ctr_moreinfo1		"Déplacer les boutons des barres en utilisant ' Personnaliser '">
 
 <!ENTITY Ctr_experimental 	"Experimental tweaks">
-<!ENTITY Ctr_combrelstop 	"Combine reload button and stop button [Fx restart needed!]">
-<!ENTITY Ctr_combrelstopt 	"Only works when both buttons are placed in a row before urlbar in this order: [...][reload][stop][...][urlbar]">
+<!ENTITY Ctr_combrelstop 	"Combined reload-stop button [Fx restart needed!]">
+<!ENTITY Ctr_combrelstopt 	"Only works when combined button is placed before urlbar like this [...][reload-stop][...][urlbar][...]. The reload-stop button on urlbar gets hidden.">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
 <!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
