--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -19,7 +19,6 @@
 <!ENTITY Ctr_findbar_bot	"Suchleiste unten">
 <!ENTITY Ctr_findbar_top	"Suchleiste oben">
 <!ENTITY Ctr_hidenavbar		"Navigationsleiste verstecken">
-<!ENTITY Ctr_hiderelstop	"Akt./Stop verstecken (Adressleiste)">
 <!ENTITY Ctr_addonbar		"Addonleiste">
 <!ENTITY Ctr_extrabar		"Extraleiste">
 
@@ -51,7 +50,7 @@
 <!ENTITY Ctr_moreinfo1 		"Buttons müssen über 'Anpassen' auf Leisten verschoben werden.">
 
 <!ENTITY Ctr_experimental 	"Experimentelle Einstellungen">
-<!ENTITY Ctr_combrelstop 	"'Aktualisieren' und 'Stop' kombinieren (Firefox neustarten!)">
-<!ENTITY Ctr_combrelstopt 	"Funktioniert nur, falls 'Aktualisieren' und 'Stop' nebeneinander vor der Adressleiste platziert werden!">
+<!ENTITY Ctr_combrelstop 	"Kombinierter 'Aktualisieren'-'Stop' Button (Firefox neustarten!)">
+<!ENTITY Ctr_combrelstopt 	"Funktioniert nur, falls 'Aktualisieren'-'Stop' Button vor der Adressleiste platziert wird ([...][Aktualisieren-Stop][...][Adressleiste][...])! Die Buttons Aktualisieren und Stop auf der Adressleiste werden deaktiviert!">
 <!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
 <!ENTITY Ctr_paneluibtweakt "Platziere den PanelUI Button auf der Tableiste um diese Änderung zu sehen! Die Optionen 'Anwendungsbutton auf Leisten/Titelleiste' müssen deaktiviert werden!">
