--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -19,7 +19,6 @@
 <!ENTITY Ctr_findbar_top	"Barra de búsqueda arriba">
 <!ENTITY Ctr_findbar_bot	"Barra de búsqueda abajo">
 <!ENTITY Ctr_hidenavbar		"Ocultar barra de navegación">
-<!ENTITY Ctr_hiderelstop	"Hide urlbars reload/stop buttons">
 <!ENTITY Ctr_addonbar		"Barra de complementos">
 <!ENTITY Ctr_extrabar		"Barra de herramientas adicional">
 
@@ -51,7 +50,7 @@
 <!ENTITY Ctr_moreinfo1		"Mover botones a las barras de herramientas usando el menú 'Personalizar' de los navegadores.">
 
 <!ENTITY Ctr_experimental 	"Experimental tweaks">
-<!ENTITY Ctr_combrelstop 	"Combine reload button and stop button [Fx restart needed!]">
-<!ENTITY Ctr_combrelstopt 	"Only works when both buttons are placed in a row before urlbar in this order: [...][reload][stop][...][urlbar]">
+<!ENTITY Ctr_combrelstop 	"Combined reload-stop button [Fx restart needed!]">
+<!ENTITY Ctr_combrelstopt 	"Only works when combined button is placed before urlbar like this [...][reload-stop][...][urlbar][...]. The reload-stop button on urlbar gets hidden.">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
 <!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
