--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -54,3 +54,5 @@
 <!ENTITY Ctr_combrelstopt 	"Funktioniert nur, falls 'Aktualisieren'-'Stop' Button vor der Adressleiste platziert wird ([...][Aktualisieren-Stop][...][Adressleiste][...])! Die Buttons Aktualisieren und Stop auf der Adressleiste werden deaktiviert!">
 <!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
 <!ENTITY Ctr_paneluibtweakt "Platziere den PanelUI Button auf der Tableiste um diese Änderung zu sehen! Die Optionen 'Anwendungsbutton auf Leisten/Titelleiste' müssen deaktiviert werden!">
+<!ENTITY Ctr_bfurlbarfix 	"2.5px Adressleisten-Randradius auf der linken Seite">
+<!ENTITY Ctr_bfurlbarfixt	"Der verschiebbare Vor-Zurück Button benötigt diese Option, falls kein anderer Css-Code zur Änderung des Randradius verwendet wird.">
