--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -1,6 +1,7 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
 <!ENTITY Ctr_main			"Main">
+<!ENTITY Ctr_special		"Special">
 <!ENTITY Ctr_experim		"Experimental">
 
 <!ENTITY Ctr_ui				"General UI">
@@ -43,16 +44,20 @@
 
 <!ENTITY Ctr_buttons		"Toolbar buttons">
 <!ENTITY Ctr_backforward	"Movable back-forward button">
+<!ENTITY Ctr_wincontrols	"Movable fullscreen window controls">
 <!ENTITY Ctr_flexspace		"Flexible space">
 <!ENTITY Ctr_space			"Space">
 <!ENTITY Ctr_separator		"Separator">
 
 <!ENTITY Ctr_moreinfo1 		"Move buttons to toolbars using browsers 'Customize' menu.">
 
+<!ENTITY Ctr_specialtw		"Special tweaks">
+<!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
+<!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
+<!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
+
 <!ENTITY Ctr_experimental 	"Experimental tweaks">
 <!ENTITY Ctr_combrelstop 	"Combined reload-stop button [Fx restart needed!]">
 <!ENTITY Ctr_combrelstopt 	"Only works when combined button is placed before urlbar like this [...][reload-stop][...][urlbar][...]. The reload-stop button on urlbar gets hidden.">
-<!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
-<!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
 <!ENTITY Ctr_bfurlbarfix 	"Force urlbars left border-radius to 2.5px">
 <!ENTITY Ctr_bfurlbarfixt	"Needs to stay disabled for custom css code being able to change left border-radius. Otherwise this is needed for 'movable back-forward button option' to change urlbars left border to match right border radius.">
