--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -1,6 +1,7 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
 <!ENTITY Ctr_main			"Grundeinstellungen">
+<!ENTITY Ctr_special		"Spezialeinstellungen">
 <!ENTITY Ctr_experim		"Experimentelle Einstellungen">
 
 <!ENTITY Ctr_ui				"Oberfläche">
@@ -43,16 +44,20 @@
 
 <!ENTITY Ctr_buttons		"Buttons">
 <!ENTITY Ctr_backforward	"Verschiebbarer Vor-Zurück Button">
+<!ENTITY Ctr_wincontrols	"Verschiebbare Vollbild-Min/Max/Schl.">
 <!ENTITY Ctr_flexspace		"Flexibler Zwischenraum">
 <!ENTITY Ctr_space			"Zwischenraum">
 <!ENTITY Ctr_separator		"Separator">
 
 <!ENTITY Ctr_moreinfo1 		"Buttons müssen über 'Anpassen' auf Leisten verschoben werden.">
 
+<!ENTITY Ctr_specialtw		"Special tweaks">
+<!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
+<!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
+<!ENTITY Ctr_paneluibtweakt "Platziere den PanelUI Button auf der Tableiste um diese Änderung zu sehen! Die Optionen 'Anwendungsbutton auf Leisten/Titelleiste' müssen deaktiviert werden!">
+
 <!ENTITY Ctr_experimental 	"Experimentelle Einstellungen">
 <!ENTITY Ctr_combrelstop 	"Kombinierter 'Aktualisieren'-'Stop' Button (Firefox neustarten!)">
 <!ENTITY Ctr_combrelstopt 	"Funktioniert nur, falls 'Aktualisieren'-'Stop' Button vor der Adressleiste platziert wird ([...][Aktualisieren-Stop][...][Adressleiste][...])! Die Buttons Aktualisieren und Stop auf der Adressleiste werden deaktiviert!">
-<!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
-<!ENTITY Ctr_paneluibtweakt "Platziere den PanelUI Button auf der Tableiste um diese Änderung zu sehen! Die Optionen 'Anwendungsbutton auf Leisten/Titelleiste' müssen deaktiviert werden!">
 <!ENTITY Ctr_bfurlbarfix 	"2.5px Adressleisten-Randradius auf der linken Seite">
 <!ENTITY Ctr_bfurlbarfixt	"Der verschiebbare Vor-Zurück Button benötigt diese Option, falls kein anderer Css-Code zur Änderung des Randradius verwendet wird.">
