--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -10,8 +10,8 @@
 <!ENTITY Ctr_tabs0			"Gerundete Tabs (Australis)">
 <!ENTITY Ctr_tabs1			"Quadratische Tabs (klassisch)">
 <!ENTITY Ctr_tabs2			"Gerundete Tabs (experimentell)">
-<!ENTITY Ctr_tabsotoff		"Tabs nicht oben">
-<!ENTITY Ctr_tabsintitlebar "Tabs auf Titelleiste">
+<!ENTITY Ctr_tabsotoff		"Tabs unten (Firefox neustarten!)">
+<!ENTITY Ctr_tabsintitlebar "Tabs auf Titelleiste (about:config)">
 <!ENTITY Ctr_tabwidth0		"Maximalbreite: 180px (standard)">
 <!ENTITY Ctr_tabwidth1		"Maximalbreite: 150px">
 <!ENTITY Ctr_tabwidth2		"Maximalbreite: 250px (klassisch)">
@@ -39,21 +39,22 @@
 <!ENTITY Ctr_appbuttonc_r	"Buttonfarbe: Rot">
 <!ENTITY Ctr_appbuttonc_g	"Buttonfarbe: Grün">
 <!ENTITY Ctr_appbuttonc_gr	"Buttonfarbe: Grau">
-<!ENTITY Ctr_appbuttonI1	"Nur auf Titel-/ Tabsleiste">
-<!ENTITY Ctr_appbuttonI2	"Neustart empfohlen">
+<!ENTITY Ctr_appbuttonI1	"Neustart empfohlen">
+<!ENTITY Ctr_appbuttonI2	"Farbe nur auf der Titelleiste">
+<!ENTITY Ctr_appbuttonI3	"und der Tabsleiste sichtbar!">
 
 <!ENTITY Ctr_buttons		"Buttons">
-<!ENTITY Ctr_backforward	"Verschiebbarer Vor-Zurück Button">
-<!ENTITY Ctr_wincontrols	"Verschiebbare Vollbild-Min/Max/Schl.">
+<!ENTITY Ctr_backforward	"Vor-Zurück Button verschiebbar">
+<!ENTITY Ctr_wincontrols	"Vollbild-Min/Max/Schl. verschiebbar">
 <!ENTITY Ctr_flexspace		"Flexibler Zwischenraum">
 <!ENTITY Ctr_space			"Zwischenraum">
-<!ENTITY Ctr_separator		"Separator">
+<!ENTITY Ctr_separator		"Trennlinie">
 
 <!ENTITY Ctr_moreinfo1 		"Buttons müssen über 'Anpassen' auf Leisten verschoben werden.">
 
-<!ENTITY Ctr_specialtw		"Special tweaks">
-<!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
-<!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
+<!ENTITY Ctr_specialtw		"Spezial Einstellungen">
+<!ENTITY Ctr_alttbappb		"Alternative Symbole für die Option 'Anwendungsbutton auf Leisten'">
+<!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton färben (auf der Tableiste)">
 <!ENTITY Ctr_paneluibtweakt "Platziere den PanelUI Button auf der Tableiste um diese Änderung zu sehen! Die Optionen 'Anwendungsbutton auf Leisten/Titelleiste' müssen deaktiviert werden!">
 
 <!ENTITY Ctr_experimental 	"Experimentelle Einstellungen">
