--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -10,8 +10,8 @@
 <!ENTITY Ctr_tabs0			"Curved tabs (Australis)">
 <!ENTITY Ctr_tabs1			"Squared tabs (classic)">
 <!ENTITY Ctr_tabs2			"Curved tabs (experimental)">
-<!ENTITY Ctr_tabsotoff		"Tabs not on top">
-<!ENTITY Ctr_tabsintitlebar "Tabs in titlebar">
+<!ENTITY Ctr_tabsotoff		"Tabs not on top (restart Fx!)">
+<!ENTITY Ctr_tabsintitlebar "Tabs in titlebar (about:config)">
 <!ENTITY Ctr_tabwidth0		"Max-width: 180px (default)">
 <!ENTITY Ctr_tabwidth1		"Max-width: 150px">
 <!ENTITY Ctr_tabwidth2		"Max-width: 250px (classic)">
@@ -39,8 +39,9 @@
 <!ENTITY Ctr_appbuttonc_r	"Red button color">
 <!ENTITY Ctr_appbuttonc_g	"Green button color">
 <!ENTITY Ctr_appbuttonc_gr	"Gray button color">
-<!ENTITY Ctr_appbuttonI1	"on title-/tabs toolbar only">
-<!ENTITY Ctr_appbuttonI2	"restart recommended">
+<!ENTITY Ctr_appbuttonI1	"restart recommended">
+<!ENTITY Ctr_appbuttonI2	"Only colored on titlebar">
+<!ENTITY Ctr_appbuttonI3	"and tabs toolbar!">
 
 <!ENTITY Ctr_buttons		"Toolbar buttons">
 <!ENTITY Ctr_backforward	"Movable back-forward button">
