--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -10,7 +10,7 @@
 <!ENTITY Ctr_tabs0			"Pestañas curvadas (Australis)">
 <!ENTITY Ctr_tabs1			"Pestañas cuadradas (clásico)">
 <!ENTITY Ctr_tabs2			"Pestañas curvadas (experimental)">
-<!ENTITY Ctr_tabsotoff		"Pestañas no arriba">
+<!ENTITY Ctr_tabsotoff		"Pestañas no arriba (restart Fx!)">
 <!ENTITY Ctr_tabsintitlebar "Pestañas en la barra de título">
 <!ENTITY Ctr_tabwidth0      "Ancho-máximo: 180px (por defecto)">
 <!ENTITY Ctr_tabwidth1      "Ancho-máximo: 150px">
@@ -39,8 +39,9 @@
 <!ENTITY Ctr_appbuttonc_r   "Color de botón rojo">
 <!ENTITY Ctr_appbuttonc_g   "Color de botón verde">
 <!ENTITY Ctr_appbuttonc_gr	"Color de botón gris">
-<!ENTITY Ctr_appbuttonI1	"sólo sobre barra de herramientas de título-/pestañas">
-<!ENTITY Ctr_appbuttonI2	"se recomienda reiniciar">
+<!ENTITY Ctr_appbuttonI1	"se recomienda reiniciar">
+<!ENTITY Ctr_appbuttonI2	"sólo sobre barra de herramientas ">
+<!ENTITY Ctr_appbuttonI3	"de título-/pestañas!">
 
 <!ENTITY Ctr_buttons		"Botones de barra de herramientas">
 <!ENTITY Ctr_backforward	"Botón atrás-adelante movible">
