--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_moreinfo1		"Déplacer les boutons des barres en utilisant ' Personnaliser '">
 
 <!ENTITY Ctr_specialtw		"Special tweaks">
+<!ENTITY Ctr_notabfog		"Disable tab toolbars fog for Australis tabs (Windows)">
 <!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
 <!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
