--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_moreinfo1 		"Buttons müssen über 'Anpassen' auf Leisten verschoben werden.">
 
 <!ENTITY Ctr_specialtw		"Spezial Einstellungen">
+<!ENTITY Ctr_notabfog		"Tableisten Hintergrund für Australis Tabs deaktivieren (Windows)">
 <!ENTITY Ctr_alttbappb		"Alternative Symbole für die Option 'Anwendungsbutton auf Leisten'">
 <!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton färben (auf der Tableiste)">
 <!ENTITY Ctr_paneluibtweakt "Platziere den PanelUI Button auf der Tableiste um diese Änderung zu sehen! Die Optionen 'Anwendungsbutton auf Leisten/Titelleiste' müssen deaktiviert werden!">
