--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -1,8 +1,8 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
 <!ENTITY Ctr_main			"Grundeinstellungen">
-<!ENTITY Ctr_special		"Spezialeinstellungen">
-<!ENTITY Ctr_experim		"Experimentelle Einstellungen">
+<!ENTITY Ctr_special		"Extra">
+<!ENTITY Ctr_experim		"Experimentell">
 
 <!ENTITY Ctr_ui				"Oberfläche">
 
@@ -10,7 +10,7 @@
 <!ENTITY Ctr_tabs0			"Gerundete Tabs (Australis)">
 <!ENTITY Ctr_tabs1			"Quadratische Tabs (klassisch)">
 <!ENTITY Ctr_tabs2			"Gerundete Tabs (experimentell)">
-<!ENTITY Ctr_tabsotoff		"Tabs unten (Firefox neustarten!)">
+<!ENTITY Ctr_tabsotoff		"Tabs 'unten'">
 <!ENTITY Ctr_tabsintitlebar "Tabs auf Titelleiste (about:config)">
 <!ENTITY Ctr_tabwidth0		"Maximalbreite: 180px (standard)">
 <!ENTITY Ctr_tabwidth1		"Maximalbreite: 150px">
@@ -31,14 +31,14 @@
 <!ENTITY Ctr_appbutton0		"Button deaktiviert">
 <!ENTITY Ctr_appbutton1		"Button auf Leisten">
 <!ENTITY Ctr_appbutton2		"Button auf Titelleiste">
-<!ENTITY Ctr_appbuttonc_o	"Buttonfarbe: Orange (Standard)">
-<!ENTITY Ctr_appbuttonc_a	"Buttonfarbe: Blau (Aurora)">
-<!ENTITY Ctr_appbuttonc_n	"Buttonfarbe: Schwarz (Nightly)">
-<!ENTITY Ctr_appbuttonc_t	"Buttonfarbe: Transparent">
-<!ENTITY Ctr_appbuttonc_p	"Buttonfarbe: Blau (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Buttonfarbe: Rot">
-<!ENTITY Ctr_appbuttonc_g	"Buttonfarbe: Grün">
-<!ENTITY Ctr_appbuttonc_gr	"Buttonfarbe: Grau">
+<!ENTITY Ctr_appbuttonc_o	"Farbe: Orange (Standard)">
+<!ENTITY Ctr_appbuttonc_a	"Farbe: Blau (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Farbe: Schwarz (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Farbe: Transparent">
+<!ENTITY Ctr_appbuttonc_p	"Farbe: Blau (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Farbe: Rot">
+<!ENTITY Ctr_appbuttonc_g	"Farbe: Grün">
+<!ENTITY Ctr_appbuttonc_gr	"Farbe: Grau">
 <!ENTITY Ctr_appbuttonI1	"Neustart empfohlen">
 <!ENTITY Ctr_appbuttonI2	"Farbe nur auf der Titelleiste">
 <!ENTITY Ctr_appbuttonI3	"und der Tabsleiste sichtbar!">
@@ -50,12 +50,12 @@
 <!ENTITY Ctr_space			"Zwischenraum">
 <!ENTITY Ctr_separator		"Trennlinie">
 
-<!ENTITY Ctr_moreinfo1 		"Buttons müssen über 'Anpassen' auf Leisten verschoben werden.">
-
 <!ENTITY Ctr_specialtw		"Spezial Einstellungen">
-<!ENTITY Ctr_notabfog		"Tableisten Hintergrund für Australis Tabs deaktivieren (Windows)">
+<!ENTITY Ctr_notabfog		"Tableistenhintergrund deaktivieren (Windows AeroGlass)">
+<!ENTITY Ctr_tabmokcolor	"Weißer Tabtext und weiße Tabbuttons (Neu, Schließen, Gruppen, Listen)">
+<!ENTITY Ctr_tabmokcolor	"Enable white color for tab text and tab buttons (close, new, group, all)">
 <!ENTITY Ctr_alttbappb		"Alternative Symbole für die Option 'Anwendungsbutton auf Leisten'">
-<!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton färben (auf der Tableiste)">
+<!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
 <!ENTITY Ctr_paneluibtweakt "Platziere den PanelUI Button auf der Tableiste um diese Änderung zu sehen! Die Optionen 'Anwendungsbutton auf Leisten/Titelleiste' müssen deaktiviert werden!">
 
 <!ENTITY Ctr_experimental 	"Experimentelle Einstellungen">
