--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -10,7 +10,7 @@
 <!ENTITY Ctr_tabs0			"Pestañas curvadas (Australis)">
 <!ENTITY Ctr_tabs1			"Pestañas cuadradas (clásico)">
 <!ENTITY Ctr_tabs2			"Pestañas curvadas (experimental)">
-<!ENTITY Ctr_tabsotoff		"Pestañas no arriba (restart Fx!)">
+<!ENTITY Ctr_tabsotoff		"Pestañas no arriba">
 <!ENTITY Ctr_tabsintitlebar "Pestañas en la barra de título">
 <!ENTITY Ctr_tabwidth0      "Ancho-máximo: 180px (por defecto)">
 <!ENTITY Ctr_tabwidth1      "Ancho-máximo: 150px">
@@ -50,10 +50,9 @@
 <!ENTITY Ctr_space			"Espacio">
 <!ENTITY Ctr_separator		"Separator">
 
-<!ENTITY Ctr_moreinfo1		"Mover botones a las barras de herramientas usando el menú 'Personalizar' de los navegadores.">
-
 <!ENTITY Ctr_specialtw		"Special tweaks">
-<!ENTITY Ctr_notabfog		"Disable tab toolbars fog for Australis tabs (Windows)">
+<!ENTITY Ctr_notabfog		"Remove tab toolbars background fog (Windows AeroGlass)">
+<!ENTITY Ctr_tabmokcolor	"White color for tab text and tab buttons (close, new, groups, list all)">
 <!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
 <!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
