--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -10,7 +10,7 @@
 <!ENTITY Ctr_tabs0			"Onglets arrondis (Australis)">
 <!ENTITY Ctr_tabs1			"Onglets à angle droit (classique)">
 <!ENTITY Ctr_tabs2			"Onglets arrondis (expérimental)">
-<!ENTITY Ctr_tabsotoff		"Onglets position basse (restart Fx!)">
+<!ENTITY Ctr_tabsotoff		"Onglets position basse">
 <!ENTITY Ctr_tabsintitlebar "Onglets dans la barre de titre">
 <!ENTITY Ctr_tabwidth0		"Largeur maximale: 180px (defaut)">
 <!ENTITY Ctr_tabwidth1		"Largeur maximale: 150px">
@@ -50,10 +50,9 @@
 <!ENTITY Ctr_space			"Espace">
 <!ENTITY Ctr_separator		"Separator">
 
-<!ENTITY Ctr_moreinfo1		"Déplacer les boutons des barres en utilisant ' Personnaliser '">
-
 <!ENTITY Ctr_specialtw		"Special tweaks">
-<!ENTITY Ctr_notabfog		"Disable tab toolbars fog for Australis tabs (Windows)">
+<!ENTITY Ctr_notabfog		"Remove tab toolbars background fog (Windows AeroGlass)">
+<!ENTITY Ctr_tabmokcolor	"White color for tab text and tab buttons (close, new, groups, list all)">
 <!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
 <!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
