--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -10,7 +10,7 @@
 <!ENTITY Ctr_tabs0			"Curved tabs (Australis)">
 <!ENTITY Ctr_tabs1			"Squared tabs (classic)">
 <!ENTITY Ctr_tabs2			"Curved tabs (experimental)">
-<!ENTITY Ctr_tabsotoff		"Tabs not on top (restart Fx!)">
+<!ENTITY Ctr_tabsotoff		"Tabs not on top">
 <!ENTITY Ctr_tabsintitlebar "Tabs in titlebar (about:config)">
 <!ENTITY Ctr_tabwidth0		"Max-width: 180px (default)">
 <!ENTITY Ctr_tabwidth1		"Max-width: 150px">
@@ -20,8 +20,8 @@
 <!ENTITY Ctr_findbar_top	"Findbar on top">
 <!ENTITY Ctr_findbar_bot	"Findbar at the bottom">
 <!ENTITY Ctr_hidenavbar		"Hide navigation toolbar">
-<!ENTITY Ctr_addonbar		"Addon-bar">
-<!ENTITY Ctr_extrabar		"Additional toolbar">
+<!ENTITY Ctr_addonbar		"Add-on Bar">
+<!ENTITY Ctr_extrabar		"Additional Toolbar">
 
 <!ENTITY Ctr_nav_txt_ico0	"Show icons only">
 <!ENTITY Ctr_nav_txt_ico1	"Show icons and text">
@@ -50,10 +50,9 @@
 <!ENTITY Ctr_space			"Space">
 <!ENTITY Ctr_separator		"Separator">
 
-<!ENTITY Ctr_moreinfo1 		"Move buttons to toolbars using browsers 'Customize' menu.">
-
 <!ENTITY Ctr_specialtw		"Special tweaks">
-<!ENTITY Ctr_notabfog		"Disable tab toolbars fog for Australis tabs (Windows)">
+<!ENTITY Ctr_notabfog		"Remove tab toolbars background fog (Windows AeroGlass)">
+<!ENTITY Ctr_tabmokcolor	"White color for tab text and tab buttons (close, new, groups, list all)">
 <!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
 <!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
