--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -1,8 +1,9 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
-<!ENTITY Ctr_main			"Main">
-<!ENTITY Ctr_special		"Special">
-<!ENTITY Ctr_experim		"Experimental">
+<!ENTITY Ctr_main_t			"Main">
+<!ENTITY Ctr_fixes_t		"Fixes">
+<!ENTITY Ctr_special_t		"Special">
+<!ENTITY Ctr_experim_t		"Experimental">
 
 <!ENTITY Ctr_ui				"Interface générale">
 
@@ -50,15 +51,19 @@
 <!ENTITY Ctr_space			"Espace">
 <!ENTITY Ctr_separator		"Separator">
 
+<!ENTITY Ctr_fixes			"Fixes">
+<!ENTITY Ctr_tnotlfix 		"Black text color on non-active tabs">
+<!ENTITY Ctr_tnotlfixt		"Some Linux versions display wrong tab text colors, if tabs are not on top. This solves the problem.">
+<!ENTITY Ctr_bfurlbarfix 	"Force urlbars left border-radius to 2.5px">
+<!ENTITY Ctr_bfurlbarfixt	"Needs to stay disabled for custom css code being able to change left border-radius. Otherwise this is needed for 'movable back-forward button option' to change urlbars left border to match right border radius.">
+
 <!ENTITY Ctr_specialtw		"Special tweaks">
 <!ENTITY Ctr_notabfog		"Remove tab toolbars background fog (Windows AeroGlass)">
 <!ENTITY Ctr_tabmokcolor	"White color for tab text and tab buttons (close, new, groups, list all)">
 <!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
-<!ENTITY Ctr_paneluibtweakt "Move PanelUI button on tabs toolbar and disable 'appbutton on titlebar/toolbar' options!">
+<!ENTITY Ctr_closeabarbut	"Hide add-on bars close button">
 
 <!ENTITY Ctr_experimental 	"Experimental tweaks">
 <!ENTITY Ctr_combrelstop 	"Combined reload-stop button [Fx restart needed!]">
-<!ENTITY Ctr_combrelstopt 	"Only works when combined button is placed before urlbar like this [...][reload-stop][...][urlbar][...]. The reload-stop button on urlbar gets hidden.">
-<!ENTITY Ctr_bfurlbarfix 	"Force urlbars left border-radius to 2.5px">
-<!ENTITY Ctr_bfurlbarfixt	"Needs to stay disabled for custom css code being able to change left border-radius. Otherwise this is needed for 'movable back-forward button option' to change urlbars left border to match right border radius.">
+<!ENTITY Ctr_combrelstopt 	"This button is independent from the also available 'stop' and 'reload' buttons and only works correctly when placed before urlbar like this [...][reload-stop][...][urlbar][...]. Using this setting the reload and stop buttons on urlbar get hidden.">
