--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -1,6 +1,7 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
 <!ENTITY Ctr_main_t			"Grundeinstellungen">
+<!ENTITY Ctr_tabcolors_t	"Tabfarben">
 <!ENTITY Ctr_fixes_t		"Korrekturen">
 <!ENTITY Ctr_special_t		"Extra">
 <!ENTITY Ctr_experim_t		"Experimentell">
@@ -50,6 +51,16 @@
 <!ENTITY Ctr_flexspace		"Flexibler Zwischenraum">
 <!ENTITY Ctr_space			"Zwischenraum">
 <!ENTITY Ctr_separator		"Trennlinie">
+
+<!ENTITY Ctr_customsqtab	"Eigene Farbeinstellungen für quadratische Tabs">
+<!ENTITY Ctr_topc			"Oben">
+<!ENTITY Ctr_bottomc		"Unten">
+<!ENTITY Ctr_textc			"Text">
+<!ENTITY Ctr_tabnor			"Tab (standard)">
+<!ENTITY Ctr_tabhov			"Tab (hover)">
+<!ENTITY Ctr_tabact			"Tab (aktiv)">
+<!ENTITY Ctr_ntabnor		"Neuer Tab (standard)">
+<!ENTITY Ctr_ntabhov		"Neuer Tab (hover)">
 
 <!ENTITY Ctr_fixes			"Korrekturen">
 <!ENTITY Ctr_tnotlfix 		"Dunkle Textfarbe für nicht-aktive Tabs">
