--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -1,6 +1,7 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
 <!ENTITY Ctr_main_t			"Main">
+<!ENTITY Ctr_tabcolors_t	"Tab colors">
 <!ENTITY Ctr_fixes_t		"Fixes">
 <!ENTITY Ctr_special_t		"Special">
 <!ENTITY Ctr_experim_t		"Experimental">
@@ -50,6 +51,16 @@
 <!ENTITY Ctr_flexspace      "Espacio flexible">
 <!ENTITY Ctr_space			"Espacio">
 <!ENTITY Ctr_separator		"Separator">
+
+<!ENTITY Ctr_customsqtab	"Custom colors for squared tabs">
+<!ENTITY Ctr_topc			"top">
+<!ENTITY Ctr_bottomc		"bottom">
+<!ENTITY Ctr_textc			"text">
+<!ENTITY Ctr_tabnor			"Tab (default)">
+<!ENTITY Ctr_tabhov			"Tab (hover)">
+<!ENTITY Ctr_tabact			"Tab (active)">
+<!ENTITY Ctr_ntabnor		"New tab (default)">
+<!ENTITY Ctr_ntabhov		"New tab (hover)">
 
 <!ENTITY Ctr_fixes			"Fixes">
 <!ENTITY Ctr_tnotlfix 		"Black text color on non-active tabs">
