--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -2,6 +2,7 @@
 
 <!ENTITY Ctr_main_t			"Grundeinstellungen">
 <!ENTITY Ctr_tabcolors_t	"Tabfarben">
+<!ENTITY Ctr_tabtext_t		"Tab Text">
 <!ENTITY Ctr_fixes_t		"Korrekturen">
 <!ENTITY Ctr_special_t		"Extra">
 <!ENTITY Ctr_experim_t		"Experimentell">
@@ -11,9 +12,10 @@
 <!ENTITY Ctr_tabs			"Tabs">
 <!ENTITY Ctr_tabs0			"Gerundete Tabs (Australis)">
 <!ENTITY Ctr_tabs1			"Quadratische Tabs (klassisch)">
+<!ENTITY Ctr_tabs1m			"Quadratische Tabs (australisiert)">
 <!ENTITY Ctr_tabs2			"Gerundete Tabs (experimentell)">
 <!ENTITY Ctr_tabsotoff		"Tabs 'unten'">
-<!ENTITY Ctr_tabsintitlebar "Tabs auf Titelleiste (about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Tabs auf Titelleiste (about:config)">
 <!ENTITY Ctr_tabwidth0		"Maximalbreite: 180px (standard)">
 <!ENTITY Ctr_tabwidth1		"Maximalbreite: 150px">
 <!ENTITY Ctr_tabwidth2		"Maximalbreite: 250px (klassisch)">
@@ -53,28 +55,34 @@
 <!ENTITY Ctr_separator		"Trennlinie">
 
 <!ENTITY Ctr_customsqtab	"Eigene Farbeinstellungen für quadratische Tabs">
-<!ENTITY Ctr_topc			"Oben">
-<!ENTITY Ctr_bottomc		"Unten">
-<!ENTITY Ctr_textc			"Text">
 <!ENTITY Ctr_tabnor			"Tab (standard)">
 <!ENTITY Ctr_tabhov			"Tab (hover)">
 <!ENTITY Ctr_tabact			"Tab (aktiv)">
 <!ENTITY Ctr_ntabnor		"Neuer Tab (standard)">
 <!ENTITY Ctr_ntabhov		"Neuer Tab (hover)">
 
+<!ENTITY Ctr_tabtext		"Tab Text- und Schattenfarben">
+<!ENTITY Ctr_ctext			"Eigene Textfarben">
+<!ENTITY Ctr_ctextsh		"Eigene Textschattenfarben">
+<!ENTITY Ctr_topc			"Obere Farbe">
+<!ENTITY Ctr_bottomc		"Untere Farbe">
+<!ENTITY Ctr_textc			"Textfarbe">
+<!ENTITY Ctr_textsh			"Textschattenfarbe">
+
 <!ENTITY Ctr_fixes			"Korrekturen">
 <!ENTITY Ctr_tnotlfix 		"Dunkle Textfarbe für nicht-aktive Tabs">
-<!ENTITY Ctr_tnotlfixt		"Einige Linux Versionen können Text unleserlich darstellen, wenn die 'Tabs unten' Einstellung gewählt ist.">
+<!ENTITY Ctr_tnotlfixt		"Einige Linux Versionen und Windows Themes können Text unleserlich darstellen, wenn die 'Tabs unten' Einstellung gewählt ist.">
 <!ENTITY Ctr_bfurlbarfix 	"2.5px Adressleisten-Randradius auf der linken Seite">
 <!ENTITY Ctr_bfurlbarfixt	"Der verschiebbare Vor-Zurück Button benötigt diese Option, falls kein anderer Css-Code zur Änderung des Randradius verwendet wird.">
 
 <!ENTITY Ctr_specialtw		"Spezial Einstellungen">
+<!ENTITY Ctr_alttbappb		"Alternative Symbole für die Option 'Anwendungsbutton auf Leisten'">
+<!ENTITY Ctr_paneluibtweak	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
+<!ENTITY Ctr_appbuttxt		"'Firefox' Text für den 'Anwendungsbutton auf der Tableiste'">
 <!ENTITY Ctr_notabfog		"Tableistenhintergrund deaktivieren (Windows AeroGlass)">
 <!ENTITY Ctr_tabmokcolor	"Weißer Tabtext und weiße Tabbuttons (Neu, Schließen, Gruppen, Listen)">
-<!ENTITY Ctr_alttbappb		"Alternative Symbole für die Option 'Anwendungsbutton auf Leisten'">
-<!ENTITY Ctr_paneluibtweak 	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
 <!ENTITY Ctr_closeabarbut	"Entferne Schließen Button von der Addonleiste">
 
-<!ENTITY Ctr_experimental 	"Experimentelle Einstellungen">
-<!ENTITY Ctr_combrelstop 	"Kombinierter 'Aktualisieren'-'Stop' Button (Firefox neustarten!)">
-<!ENTITY Ctr_combrelstopt 	"Funktioniert nur, falls der von den anderen 'Aktualisieren' und 'Stop' Buttons unabhängige kombinierte 'Aktualisieren'-'Stop' Button vor der Adressleiste platziert wird ([...][Aktualisieren-Stop][...][Adressleiste][...])! Die Buttons 'Aktualisieren' und 'Stop' auf der Adressleiste werden deaktiviert!">
+<!ENTITY Ctr_experimental	"Experimentelle Einstellungen">
+<!ENTITY Ctr_combrelstop	"Kombinierter 'Aktualisieren'-'Stop' Button (Firefox neustarten!)">
+<!ENTITY Ctr_combrelstopt	"Funktioniert nur, falls der von den anderen 'Aktualisieren' und 'Stop' Buttons unabhängige kombinierte 'Aktualisieren'-'Stop' Button vor der Adressleiste platziert wird ([...][Aktualisieren-Stop][...][Adressleiste][...])! Die Buttons 'Aktualisieren' und 'Stop' auf der Adressleiste werden deaktiviert!">
