--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -2,6 +2,7 @@
 
 <!ENTITY Ctr_main_t			"Main">
 <!ENTITY Ctr_tabcolors_t	"Tab colors">
+<!ENTITY Ctr_tabtext_t		"Tab text">
 <!ENTITY Ctr_fixes_t		"Fixes">
 <!ENTITY Ctr_special_t		"Special">
 <!ENTITY Ctr_experim_t		"Experimental">
@@ -11,12 +12,13 @@
 <!ENTITY Ctr_tabs			"Pestañas">
 <!ENTITY Ctr_tabs0			"Pestañas curvadas (Australis)">
 <!ENTITY Ctr_tabs1			"Pestañas cuadradas (clásico)">
+<!ENTITY Ctr_tabs1m			"Pestañas cuadradas (australized)">
 <!ENTITY Ctr_tabs2			"Pestañas curvadas (experimental)">
 <!ENTITY Ctr_tabsotoff		"Pestañas no arriba">
-<!ENTITY Ctr_tabsintitlebar "Pestañas en la barra de título">
-<!ENTITY Ctr_tabwidth0      "Ancho-máximo: 180px (por defecto)">
-<!ENTITY Ctr_tabwidth1      "Ancho-máximo: 150px">
-<!ENTITY Ctr_tabwidth2      "Ancho-máximo: 250px (clásico)">
+<!ENTITY Ctr_tabsintitlebar	"Pestañas en la barra de título">
+<!ENTITY Ctr_tabwidth0		"Ancho-máximo: 180px (por defecto)">
+<!ENTITY Ctr_tabwidth1		"Ancho-máximo: 150px">
+<!ENTITY Ctr_tabwidth2		"Ancho-máximo: 250px (clásico)">
 <!ENTITY Ctr_smallnavbut	"Botones pequeños">
 <!ENTITY Ctr_findbar_def	"Barra de búsqueda, (posición por defecto)">
 <!ENTITY Ctr_findbar_top	"Barra de búsqueda arriba">
@@ -25,21 +27,21 @@
 <!ENTITY Ctr_addonbar		"Barra de complementos">
 <!ENTITY Ctr_extrabar		"Barra de herramientas adicional">
 
-<!ENTITY Ctr_nav_txt_ico0   "Mostrar sólo iconos">
-<!ENTITY Ctr_nav_txt_ico1   "Mostrar iconos y texto">
-<!ENTITY Ctr_nav_txt_ico2   "Mostrar sólo texto">
+<!ENTITY Ctr_nav_txt_ico0	"Mostrar sólo iconos">
+<!ENTITY Ctr_nav_txt_ico1	"Mostrar iconos y texto">
+<!ENTITY Ctr_nav_txt_ico2	"Mostrar sólo texto">
 
 <!ENTITY Ctr_appbutton		"Botón de la aplicación">
 <!ENTITY Ctr_appbutton0		"Botón deshabilitado">
 <!ENTITY Ctr_appbutton1		"Botón en la barra de herramientas">
 <!ENTITY Ctr_appbutton2		"Botón en la barra de título">
-<!ENTITY Ctr_appbuttonc_o   "Color de botón naranja (por defecto)">
-<!ENTITY Ctr_appbuttonc_a   "Color de botón azul (Aurora)">
-<!ENTITY Ctr_appbuttonc_n   "Color de botón negro (Nightly)">
-<!ENTITY Ctr_appbuttonc_t   "Botón transparente">
-<!ENTITY Ctr_appbuttonc_p   "Color de botón azul (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r   "Color de botón rojo">
-<!ENTITY Ctr_appbuttonc_g   "Color de botón verde">
+<!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (por defecto)">
+<!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
+<!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
+<!ENTITY Ctr_appbuttonc_t	"Botón transparente">
+<!ENTITY Ctr_appbuttonc_p	"Color de botón azul (Palemoon)">
+<!ENTITY Ctr_appbuttonc_r	"Color de botón rojo">
+<!ENTITY Ctr_appbuttonc_g	"Color de botón verde">
 <!ENTITY Ctr_appbuttonc_gr	"Color de botón gris">
 <!ENTITY Ctr_appbuttonI1	"se recomienda reiniciar">
 <!ENTITY Ctr_appbuttonI2	"sólo sobre barra de herramientas ">
@@ -48,31 +50,37 @@
 <!ENTITY Ctr_buttons		"Botones de barra de herramientas">
 <!ENTITY Ctr_backforward	"Botón atrás-adelante movible">
 <!ENTITY Ctr_wincontrols	"Movable fullscreen window controls">
-<!ENTITY Ctr_flexspace      "Espacio flexible">
+<!ENTITY Ctr_flexspace		"Espacio flexible">
 <!ENTITY Ctr_space			"Espacio">
 <!ENTITY Ctr_separator		"Separator">
 
 <!ENTITY Ctr_customsqtab	"Custom colors for squared tabs">
-<!ENTITY Ctr_topc			"top">
-<!ENTITY Ctr_bottomc		"bottom">
-<!ENTITY Ctr_textc			"text">
 <!ENTITY Ctr_tabnor			"Tab (default)">
 <!ENTITY Ctr_tabhov			"Tab (hover)">
 <!ENTITY Ctr_tabact			"Tab (active)">
 <!ENTITY Ctr_ntabnor		"New tab (default)">
 <!ENTITY Ctr_ntabhov		"New tab (hover)">
 
+<!ENTITY Ctr_tabtext		"Tab text and shadow colors">
+<!ENTITY Ctr_ctext			"Custom text colors">
+<!ENTITY Ctr_ctextsh		"Custom text shadow colors">
+<!ENTITY Ctr_topc			"top color">
+<!ENTITY Ctr_bottomc		"bottom color">
+<!ENTITY Ctr_textc			"text color">
+<!ENTITY Ctr_textsh			"text shadow color">
+
 <!ENTITY Ctr_fixes			"Fixes">
 <!ENTITY Ctr_tnotlfix 		"Black text color on non-active tabs">
-<!ENTITY Ctr_tnotlfixt		"Some Linux versions display wrong tab text colors, if tabs are not on top. This solves the problem.">
+<!ENTITY Ctr_tnotlfixt		"Some Linux versions and some Windows themes may display wrong tab text colors, if tabs are not on top.">
 <!ENTITY Ctr_bfurlbarfix 	"Force urlbars left border-radius to 2.5px">
 <!ENTITY Ctr_bfurlbarfixt	"Needs to stay disabled for custom css code being able to change left border-radius. Otherwise this is needed for 'movable back-forward button option' to change urlbars left border to match right border radius.">
 
 <!ENTITY Ctr_specialtw		"Special tweaks">
-<!ENTITY Ctr_notabfog		"Remove tab toolbars background fog (Windows AeroGlass)">
-<!ENTITY Ctr_tabmokcolor	"White color for tab text and tab buttons (close, new, groups, list all)">
 <!ENTITY Ctr_alttbappb		"Alternative icons for 'appbutton on toolbar' option">
 <!ENTITY Ctr_paneluibtweak 	"Appbutton appearance for panel ui button (on tabs toolbar)">
+<!ENTITY Ctr_appbuttxt		"'Firefox' text for 'appbutton on tabs toolbar'">
+<!ENTITY Ctr_notabfog		"Remove tab toolbars background fog (Windows AeroGlass)">
+<!ENTITY Ctr_tabmokcolor	"White color for tab text and tab buttons (close, new, groups, list all)">
 <!ENTITY Ctr_closeabarbut	"Hide add-on bars close button">
 
 <!ENTITY Ctr_experimental 	"Experimental tweaks">
